Fixed board grid and columns alignment

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -42,3 +42,8 @@ body, html {
     display: none;
     color: #9b9494;
 }
+
+.grid-frame {
+    width: calc;
+    overflow-x: scroll;
+}
